--- a/questionair.html
+++ b/questionair.html
@@ -11,85 +11,37 @@
 </head>
 
 <style>
-    form {
-        font-family: Arial, sans-serif;
-        margin: 0 auto;
-        width: 80%;
-    }
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-    /* Style the radio buttons */
-    input[type=radio] {
-        align-content: center;
-    }
-
-    /* Style the dropdowns */
-    select {
-        display: none;
-        margin: 10px;
-    }
-
-    /* Show the dropdown when the radio button is selected */
-    input[type=radio]:checked+select {
-        display: block;
-    }
-
-    /* Style the text input */
-    input[type=text] {
-        display: none;
-        margin: 10px;
-    }
-
-    /* Show the text input when "Add Information" is selected */
-    input[type=radio][value=add-info]:checked~input[type=text] {
-        display: block;
-    }
-
-    /* Style the submit button */
-    input[type=submit] {
-        background-color: #4CAF50;
-        border: none;
-        border-radius: 5px;
-        color: white;
-        cursor: pointer;
-        margin: 10px;
-        padding: 10px;
-        text-align: center;
-        text-decoration: none;
-        width: 100%;
-    }
-
-    /* Style the message */
-    .message {
-        margin: 10px;
-        padding: 10px;
-        text-align: center;
-        font-size: 16px;
-        font-weight: bold;
-    }
-
-    /* Style the container */
-    .container {
-        padding: 20px;
-        background-color: #f2f2f2;
-        border-radius: 10px;
-    }
-
-    /* Style the form on desktop screens */
-    @media screen and (min-width: 768px) {
-        form {
-            width: 50%;
-        }
+    body {
+        font-family: "Poppins", sans-serif;
     }
 </style>
 
-<body>
-    <div class="container">
-        <h1>Select a Name</h1>
-        <div id="message"></div>
+<body class="bg-light">
+    <div class="container" style="display: flex; flex-direction: column;align-items: center;">
+        <h2 style="font-weight: bold; text-align: center; margin:30px 0 50px 0;">Family Tree Info collection
+        </h2>
+        <div class="container">
+            <!-- alert message -->
+            <div id="alert" class="alert" role="alert" style="display: none;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <span id="alert-text"></span>
+            </div>
+        </div>
         <form>
+            <!-- load message -->
+            <div id="loading" class="d-none text-center my-4">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+                <div class="mt-2">Submitting your information...</div>
+            </div>
             <div class="form-group">
+                <label for="action" style="font-weight: bold; font-size: 18px;">Choose GrandMother first</label>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="name" id="wacuka" value="wacuka">
+                    <input class="form-check-input" type="radio" name="name" id="wacuka" value="wacuka" required>
                     <label class="form-check-label" for="wacuka">
                         Wacuka
                     </label>
@@ -109,10 +61,10 @@
             </div>
             <div class="form-group" id="options">
             </div>
-            <div class="form-group">
-                <label for="action">Choose an Action</label>
-                <select class="form-control" id="action" name="action">
-                    <option value="">Select an Action</option>
+            <div class="form-group d-none" id="action-div">
+                <label for="action" style="font-weight: bold; font-size: 18px;">What do you want to do ?</label>
+                <select class="form-control " id="action" name="action" required>
+                    <option value="">Choose an Action</option>
                     <option value="add">Add Information</option>
                     <option value="edit">Edit Information</option>
                     <option value="delete">Delete Information</option>
@@ -120,7 +72,7 @@
             </div>
             <div class="form-group" id="input">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary d-none" id="btn-submit">Submit</button>
         </form>
     </div>
 
@@ -129,17 +81,21 @@
     <script>
         $(document).ready(function () {
             $('input[type="radio"]').change(function () {
+                // Show the action div
+                $('#action-div').removeClass('d-none');
+
                 var name = $(this).val();
                 var options = '';
                 switch (name) {
                     case 'wacuka':
-                        options = '<label for="option">Select a House</label><select class="form-control" id="option" name="option"><option value="">Select a House</option><option value="House of Sabina Njoki">House of Sabina Njoki</option><option value="House of Michael Ndungu">House of Michael Ndungu</option></select>';
+
+                        options = '<label for="option" style="font-weight: bold; font-size: 18px;">Select a House</label><select class="form-control" id="option" name="option"required><option value="">Select a House</option><option value="House of Sabina Njoki">House of Sabina Njoki</option><option value="House of Michael Ndungu">House of Michael Ndungu</option></select>';
                         break;
                     case 'naomi':
-                        options = '<label for="option">Select a House</label><select class="form-control" id="option" name="option"><option value="">Select a House</option><option value="House of Mugo">House of Mugo</option><option value="House of Njenga Omari">House of Njenga Omari</option><option value="House of Kaguta">House of Kaguta</option><option value="House of Lucy">House of Lucy</option><option value="House of Muhoho">House of Muhoho</option><option value="House of Githendu">House of Githendu</option><option value="House of Kungu">House of Kungu</option><option value="House of Maina">House of Maina</option></select>';
+                        options = '<label for="option" style="font-weight: bold; font-size: 18px;">Select a House</label><select class="form-control" id="option" name="option" required><option value="">Select a House</option><option value="House of Mugo">House of Mugo</option><option value="House of Njenga Omari">House of Njenga Omari</option><option value="House of Kaguta">House of Kaguta</option><option value="House of Lucy">House of Lucy</option><option value="House of Muhoho">House of Muhoho</option><option value="House of Githendu">House of Githendu</option><option value="House of Kungu">House of Kungu</option><option value="House of Maina">House of Maina</option></select>';
                         break;
                     case 'wanjiru':
-                        options = '<label for="option">Select a House</label><select class="form-control" id="option" name="option"><option value="">Select a House</option><option value="House of Lilian">House of Lilian</option><option value="House of Njeri">House of Njeri</option><option value="House of Wambui">House of Wambui</option><option value="House of Wanjiku">House of Wanjiku</option><option value="House of Chege">House of Chege</option><option value="House of Njoki">House of Njoki</option></select>';
+                        options = '<label for="option" style="font-weight: bold; font-size: 18px;">Select a House</label><select class="form-control" id="option" name="option"required><option value="">Select a House</option><option value="House of Lilian">House of Lilian</option><option value="House of Njeri">House of Njeri</option><option value="House of Wambui">House of Wambui</option><option value="House of Wanjiku">House of Wanjiku</option><option value="House of Chege">House of Chege</option><option value="House of Njoki">House of Njoki</option></select>';
                         break;
                     default:
                         options = '';
@@ -149,17 +105,19 @@
             });
 
             $('#action').change(function () {
+                // Show the submit button
+                $('#btn-submit').removeClass('d-none');
                 var action = $(this).val();
                 var input = '';
                 switch (action) {
                     case 'add':
-                        input = '<label for="info">Add Information</label><textarea class="form-control" id="info" name="info" rows="7"></textarea>';
+                        input = '<label for="info" style="font-weight: bold; font-size: 18px;">Which Information do you want to Add ?</label><textarea class="form-control" id="info" name="info" rows="7" placeholder="Write here what you want to be Added. example. in house Lucy child John add Wife (name of wife,) more info..... " required></textarea>';
                         break;
                     case 'edit':
-                        input = '<label for="info">Edit Information</label><textarea class="form-control" id="info" name="info" rows="7"></textarea>';
+                        input = '<label for="info" style="font-weight: bold; font-size: 18px;" >Which Information do you want Edited ? </label><textarea class="form-control" id="info" name="info" rows="7" placeholder="Write here what you want to be changed or edited. example. in house mugo wife jane child peter change (info to change) more info..... " required></textarea>';
                         break;
                     case 'delete':
-                        input = '<label for="info">Delete Information</label><textarea class="form-control" id="info" name="info" rows="7"></textarea>';
+                        input = '<label for="info" style="font-weight: bold; font-size: 18px;" >Which Information do you want Deleted ?</label><textarea class="form-control" id="info" name="info" rows="7"placeholder="Write here what you want to be Removed/Deleted. example. in house mugo wife jane child peter remove (info to remove) more info..... "required></textarea>';
                         break;
                     default:
                         input = '';
@@ -173,25 +131,47 @@
                 var house = $('#option').val();
                 var action = $('#action').val();
                 var info = $('#info').val();
+                var timestamp = new Date().toLocaleString();
                 if (name && house && action && info) {
                     var data = {
-                        'name': name,
-                        'house': house,
-                        'action': action,
-                        'info': info
+                        'Grandmother': name,
+                        'House': house,
+                        'Action': action,
+                        'Information': info,
+                        'Time': timestamp
                     };
+
+                    // Show the loading spinner
+                    $('#loading').removeClass('d-none');
                     $.ajax({
                         url: 'https://script.google.com/macros/s/AKfycbySENgF-SVZKL4lTSGndWa0aRwoAZeWJvpO7PuvU_5eIKhYQ42YaoiofJ_TUOdRbN1I2w/exec',
                         type: 'POST',
                         data: data,
                         success: function (response) {
                             console.log(response);
-                            $('#message').html('Information submitted successfully.').addClass('text-success').removeClass('text-danger');
+                            // Hide the loading spinner and show a success message in the alert element
+                            $('#loading').addClass('d-none');
+                            // Show a success message in the alert element
+                            $('#alert').removeClass('alert-danger').addClass('alert-success');
+                            $('#alert-text').text('Your information has been submitted successfully!');
+                            $('#alert').fadeIn(1000);
+                            setTimeout(function () {
+                                $('#alert').fadeOut(1000);
+                            }, 5000);
                             $('form')[0].reset();
                         },
                         error: function (response) {
                             console.log(response);
-                            $('#message').html('Error submitting information.').addClass('text-danger').removeClass('text-success');
+                            // Hide the loading spinner and show a success message in the alert element
+                            $('#loading').addClass('d-none');
+                            // Show an error message in the alert element
+                            $('#alert').removeClass('alert-success').addClass('alert-danger');
+                            $('#alert-text').text('There was an error submitting your information. Please try again.');
+                            $('#alert').fadeIn(1000);
+                            setTimeout(function () {
+                                $('#alert').fadeOut(1000);
+                            }, 5000);
+                            $('form')[0].reset();
                         }
                     });
                 } else {
@@ -199,9 +179,6 @@
                 }
             });
         });
-
-
-
     </script>
 
 
