--- a/questionair.html
+++ b/questionair.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Page</title>
+    <title>Team Kariuki</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -25,9 +25,9 @@
 
 <body class="bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 30px;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Website</a>
+            <a class="navbar-brand" href="https://joekariuki3.github.io/TeamKariukis/">Team Kariukis</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,10 +35,12 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="https://joekariuki3.github.io/TeamKariukis/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Suggestions</a>
+                        <a class="nav-link" href="https://joekariuki3.github.io/TeamKariukis/questionair.html">Add
+                            Information</a>
                     </li>
                 </ul>
             </div>
