--- a/questionair.html
+++ b/questionair.html
@@ -35,11 +35,11 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"
-                            href="https://joekariuki3.github.io/TeamKariukis/">Home</a>
+                        <a class="nav-link" href="https://joekariuki3.github.io/TeamKariukis/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://joekariuki3.github.io/TeamKariukis/questionair.html">Add
+                        <a class="nav-link active" aria-current="page"
+                            href="https://joekariuki3.github.io/TeamKariukis/questionair.html">Add
                             Information</a>
                     </li>
                 </ul>
