--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
 
 
-        <div class="main__key" style="display: flex; align-items: center; display: flex">
+        <div class="main__key" style="display: flex; align-items: center; display: flex; margin-bottom: 40px;">
 
             <div class="key" style="
                 display: flex;
@@ -74,8 +74,9 @@
                   margin-right: 5px;
                   background: rgb(27, 154, 27);
                   
+                  
                 "></div>
-                <p>Node</p>
+                Node
             </div>
             <div class="key" style="
                 display: flex;
@@ -90,7 +91,7 @@
                   margin-right: 5px;
                   background: gray;
                 "></div>
-                <p>Deceased</p>
+                Deceased
             </div>
             <div class="key" style="
                 display: flex;
@@ -105,7 +106,7 @@
                   margin-right: 5px;
                   background: #fc46aa;
                 "></div>
-                <p>Wife</p>
+                Wife
             </div>
             <div class="key" style="
                 display: flex;
@@ -120,7 +121,7 @@
                   margin-right: 5px;
                   background: #279bc9;
                 "></div>
-                <p>Husband</p>
+                Husband
             </div>
         </div>
     </div>
