--- a/questionair.html
+++ b/questionair.html
@@ -48,18 +48,8 @@
     </nav>
 
 
-
-
-
-
-
-
-
-
-
-
     <div class="container" style="display: flex; flex-direction: column;align-items: center;">
-        <h2 style="font-weight: bold; text-align: center; margin:30px 0 50px 0;">Family Tree Info collection
+        <h2 style="font-weight: bold; text-align: center; margin:30px 0 30px 0;">Family Tree Info collection
         </h2>
         <div class="container">
             <!-- alert message -->
@@ -101,7 +91,8 @@
             <div class="form-group" id="options">
             </div>
             <div class="form-group d-none" id="action-div">
-                <label for="action" style="font-weight: bold; font-size: 18px;">What do you want to do ?</label>
+                <label for="action" style="font-weight: bold; font-size: 18px;">What do you want to do ? choose action
+                    below</label>
                 <select class="form-control " id="action" name="action" required>
                     <option value="">Choose an Action</option>
                     <option value="add">Add Information</option>
