fixing margin below submit button

--- a/questionair.html
+++ b/questionair.html
@@ -48,7 +48,7 @@
     </nav>
 
 
-    <div class="container" style="display: flex; flex-direction: column;align-items: center; margin-bottom: 50px;">
+    <div class="container" style="display: flex; flex-direction: column;align-items: center; padding-bottom: 50px;">
         <h2 style="font-weight: bold; text-align: center; margin:30px 0 30px 0;">Family Tree Info collection
         </h2>
         <div class="container">
@@ -102,7 +102,7 @@
             </div>
             <div class="form-group" id="input">
             </div>
-            <button type="submit" class="btn btn-primary d-none" id="btn-submit">Submit</button>
+            <button type="submit" class="btn btn-primary d-none" id="btn-submit">Send</button>
         </form>
     </div>
 
